Incorporated Kim, Noor, and Jason's results

--- a/SMHET.tex
+++ b/SMHET.tex
@@ -192,64 +192,114 @@ the PIW model for nanocubes) so that the orbital energies can be readily compute
 %F-P     - moderately short resonance, narrower in energy, provides a more sustained kick to the system
 %WGM     - Longer resonance, narrower in energy (many peaks), provides multiple sustained kicks to the system
 %        - with repitition times
-Such a model of an Au NC with $L=2nm$ has a number of dipole-allowed transitions between 1.3 and 3.3 eV, and
-indeed the LSPR of a 2nm Au NC has partial overlap with a transition at approximately 2.5 eV (see Figure 1a).
-In this work, 4900 singly-excited configurations are included in $|\Psi_{CIS}\rangle$ for the Au NC, and the relatively
-small number of energetically distinguishable lines is due to the large degeneracy of dipole-allowed transitions in this model.  
-The spectral flexibility of dielectric scattering
-resonances allows tuning to overlap with one or more of these transition energies via the nanosphere size; for example,
-a $d=270nm$ TiO$_2$ NS has a scattering resonance that overlaps with an Au transition at 3.1 eV, and
-a $d=685nm$ TiO$_2$ NS has scattering resonances that overlap with every transition between 1.3 and 3.3 eV.
-As proxies of the hot-carrier dynamics, we plot the population dynamics of the highest and lowest energy orbitals in our active space, which lie
-2.2 eV above and 1.6 eV below the Fermi energy, respectively (Figure 1 (a) and (b)).  Snapshots of the populations of all active
-orbitals at various times are also provided in the supplemental information.  We observe that LSPR the LSPR generates a relatively small
-population of hot-carriers
-and hot-hole generation with field-driven dynamics that evolve on a short (~10 fs) timescale.
-
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Au_AllThree_Alternate.png}
 \caption{Three regimes for light-matter interactions leading to unique
 spatial and temporal shaping of the incident field, and the corresponding
-impact on electronic dynamics in a Au nanocube. Plots of the near-field enhancements (${\bf |E|}/{\bf |E_0|}$) are shown of the 
-Au NC's LSPR ($\lambda=532 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm TiO$_2$ NS decorated with Au NCs ($\lambda = 397 nm$, {\bf Panel (b)}),
-and a Whispering Gallery Mode resonance of a d=685 nm TiO$_2$ NS decorated with Au NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
-The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Au NC, showing particularly 
-strong overlap between these transitions and the scattering resonances of the d=685 nm TiO$_2$ NS ({\bf Panel (d)}).
+impact on electronic dynamics in a Au nanocube. Plots of the near-field enhancements (${\bf |E|}/{\bf |E_0|}$) are shown of the
+Au NC's LSPR ($\lambda=532 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric NS decorated with Au NCs ($\lambda = 397 nm$, {\bf Panel (b)}),
+and a Whispering Gallery Mode resonance of a d=685 nm dielectric NS decorated with Au NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
+The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Au NC, showing particularly
+strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric NS ({\bf Panel (d)}).
 Both dielectric scattering resonances show more efficient generation of hot-electrons ({\bf Panel (e)}) and hot-holes ({\bf Panel(f)}) compared to LSPR in this case.}
 \end{center}
 \end{figure}
 
+%% E_f gold is 5.52 eV, Nels = 472
+%% E_f Pt   is 9.40 eV, Nels = 1104
+Such models of metal (Au and Pt) NCs with $L=2nm$ have a number of dipole-allowed transitions between 1 and 3 eV.
+In this work, 4900 singly-excited configurations are included in $|\Psi_{CIS}\rangle$ for both Au and Pt NCs.  The electronic structure
+of these model nanocubes is distinguishable by their Fermi energies and the number of electrons: the Au NC model has a Fermi energy 
+of 5.52 eV (compared to the bulk value of 5.53 eV) and 472 electrons, the Pt NC model has a Fermi energy of 9.40 eV (compared to the bulk
+value of 9.75 eV) and 1104 electrons.  Despite the large number of excited states included in our many-electron wavefunctions, the high 
+degeneracy of the underlying dipole-allowed transitions leads to a relatively small number of visible spectroscopic lines for the Au (see Figure 1 (d))
+and Pt models (see Figure 2 (d)). 
 
+The spectral flexibility of dielectric scattering
+resonances allows tuning to overlap with one or more of these transition energies via the nanosphere size; for example,
+a $d=270nm$ dielectric NS has a broad scattering resonance (herein referred to as a Fabry-Perot (FP) resonance) that overlaps 
+with an Au transition at 3.1 eV, and
+a $d=685nm$ dielectric NS has narrow scattering resonances (whispering gallery modes (WGM)) that overlap with every transition between 1.3 and 3.3 eV.
+As proxies of the hot-carrier dynamics, we plot the population dynamics of the highest and lowest energy orbitals in our active space, which lie
+2.2 eV above and 1.6 eV below the Fermi energy, respectively (Figure 1 (e) and (f)).  Snapshots of the populations of all active
+orbitals in the Au NC model at various times are also provided in the supplemental information (see Figure S1).  
+We observe that the LSPR generates a relatively small
+population of hot-carriers with field-driven dynamics that evolve on a short (~10 fs) timescale.  FP resonance in this
+case lead to significantly more efficient hot-hole generation with field driven dynamics that evolve on a moderate (~50 fs) timescale (Figure 1(f)), while
+WGM resonances lead to significantly more efficienty hot-electron generation with field drive dynamics that evolve on a much longer (~200 fs) timescale
+(Figure 1(e) and Figure 3(b)).
+
+These differences can be attributed in part to the unique ways in which each resonant interaction modulates the incident optical
+fields in space and time. An illustration of the former can be see in the electric field intensity maps at the resonance frequency for the 
+Au LSPR (Figure 1(a)), FP resonance (Figure 1(b)), and WGM resonance (Figure 1(c)), which shows a progressive increase in maximum nearfield
+enhancement associated with these resonances.  The larger nearfield enhancement associated with the dielectric scattering resonances
+compared to the Au NC LSPR is consisistent with the observation that the dielectric scattering lead to more efficient generation
+of hot-carriers.  Similarly, a progression of resonance lifetime can be inferred for these resonances from their extinction spectra, with 
+the Au LSPR having the broadest extinction peak and the shortest lifetime, and the WGM having the narrowest extinction peaks and longest lifetimes.  
+Longevity of the evolution of the electric field resulting from dielectric scattering resonances are consistent with 
+with longer period of population movement from Fermi level and below to higher unoccupied orbitals when compared with surface plasmon 
+resonance of Au.  
+%This corresponds to hot-hole generation in lowest orbitals and hot electron generation being potentially more 
+%efficient in dielectric scattering structures as opposed to surface plasmon resonance. SPR of 2 nm Au nanoparticle isolated 
+%demonstrates population dynamic changes that taper off at 10 fs compared to upwards of 70 fs for 270 nm dielectric-Au composite structure and
+%685nm dielectric-Au composite structure. Gold has a Fermi energy of 5.53 eV. Additionally, one can see that there are other orbitals that 
+%lie below the Fermi level as well as orbitals that lie above the Fermi level. The Fermi level is the energy of the highest 
+%occupied molecular orbital of the ground state configuration. In other words, all the orbitals below the 
+%Fermi level and at the Fermi level are doubly occupied to be illuminated. Additionally, all the orbitals above the 
+%Fermi level are unoccupied. 
+ 	
+The second figure (Figure 4) depicts the scattering spectra of a succession of differently sized dielectric nanospheres 
+and their alignment with the gold dipole-allowed transitions. We observe that the nanosphere with diameter 685nm 
+has the best alignment with the gold transitions, and similarly, the 685nm nanosphere is also most efficient 
+in generating both hot-electrons and hot-holes. 
+\begin{figure}
+\begin{center}
+\includegraphics[width=6in]{figs/Pt_AllThree_Alternate.png}
+\caption{Three regimes for light-matter interactions leading to unique
+spatial and temporal shaping of the incident field, and the corresponding
+impact on electronic dynamics in a Pt nanocube. Plots of the near-field enhancements (${\bf |E|}/{\bf |E_0|}$) are shown of the
+Pt NC's extinction maximum ($\lambda=200 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric NS decorated with Pt NCs 
+($\lambda = 397 nm$, {\bf Panel (b)}),
+and a Whispering Gallery Mode resonance of a d=685 nm dielectric NS decorated with Pt NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
+The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Pt NC, showing particularly
+strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric NS ({\bf Panel (d)}).
+Both dielectric scattering resonances show more efficient generation of hot-electrons ({\bf Panel (e)}) and hot-holes ({\bf Panel(f)}) compared to LSPR in this case.}
+\end{center}
+\end{figure}
+
+Figure 5 also represents the scattering spectra of a succession of differently sized dielectric nanospheres and their alignment with 
+Pt dipole-allowed transitions. 685nm diameter nanospheres display the most accurate alignment with Pt dipole allowed 
+transitions, as was seen in Figure 4 for composite dielectric-Au structures. 
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Au_WGM_Spectrum_and_Trajectories.png}
 \caption{Fine-shaping of the spatial and temporal shaping of the incident field
-through the geometry of the dielectric nanosphere.  Panel {\bf (b)} shows
-the scattering spectra of a size progression of TiO$_2$ nanospheres that display
+through the geometry of the dielectric nanosphere.  Panel {\bf (a)} shows
+the scattering spectra of a size progression of dielectric nanospheres that display
 predominately Whispering Gallery Mode visible resonances.  The
 685nm nanosphere's scattering spectra has the best overlap with the dipole-allowed
 transitions in the Au NC model, and this structure shows most efficient
 generation of hot-electrons in the most energetic orbitals included in our
 active space (Panel {\bf (b)}), and more efficiently generation of
-hot holes in the lowest energy orbitals included in our active space (Panel 
+hot holes in the lowest energy orbitals included in our active space (Panel
 {\bf (c)}).   }
 \end{center}
 \end{figure}
-
-
-\begin{figure}
-\begin{center}
-\includegraphics[width=6in]{figs/Pt_WGM_Spectrum_and_Trajectories.png}
-\caption{Progressive scattering spectra of TiO$_2$ nanospheres overlaid with the dipole-allowed transitions of the Pt NC Model show partial overlap between
-the resonances of the 685 nm, 690 nm, and 695 nm nanospheres 
-(Panel {\bf (a)}).  The 685 nm nanosphere's scattering again shows
-greatest efficacy for generating hot-electrons in the most energetic
-orbitals and hot-holes in the lowest energy orbitals in our Pt NC model.}
-\end{center}
-\end{figure}
+The scattering of the dielectric on the spectra compared with the Platinum transitions has a unique significance when 
+compared with the dielectric-Au structure. Although platinum is a non-plasmonic metal in the visible range, it is also 
+capable of generating hot-electrons and hot-holes within the visible light range. This demonstrates this method of 
+hot electron generation is independent of plasmonic activity and potentially can be expanded to various more abundant and cost efficient metals as opposed to Au. 
+The diameter size 685nm is able to excite hot electrons and hot holes on the metal nanocubes on its surface showing its increased 
+efficiency over the rest of the sizes. 
+Extra figures, to be found in the supplemental information accompanying this paper, show the change in 
+occupancy of all the orbitals (with different energies each) in the different structures at various times, 
+for the different metals. ( Should we arrange the figures in the supplemental information in groups based 
+upon structure, metal {for this paragraph this is how I will arrange them} or time step??) We are able to 
+observe in the figures for both metals, that the nano cube structures cease to change their orbital 
+occupancy after the 20th timestep. Similarly we find that the Fabry-Perot structures??
 
 
 \section{Supplementary Information}
@@ -414,7 +464,8 @@ of the field is required at some time $t_m = t_2 + m\cdot dt$ where $m$ is non-i
 {\bf E}(t_m) =  {\bf E}(t_2) + \frac{{\bf E}(t_3)-{\bf E}(t_1) }{t_3 - t_1 } \cdot m\cdot dt.
 \end{equation}
 
-The optical response of Au and Pt in the FDTD simulations utilizes permitivity data from the work of Johnson and Christy~\cite{JC_PRB_1972} and Palik~\cite{Palik}, respectively.  We assume a static dielectric constant of 2.6 for TiO$_2$ in this work, and neglect its UV absorption. 
+The optical response of Au and Pt in the FDTD simulations utilizes permitivity data from the work of Johnson and Christy~\cite{JC_PRB_1972} and Palik~\cite{Palik}, respectively.  We assume a static dielectric constant of 2.6 for
+the dielectric nanospheres in this work, which is comparable to the visible dielectric constant of titanium dioxide. 
 
 \section{Acknowledgment}
 This work was performed, in part, utilizing resources at
