Revised results a bit

--- a/SMHET.tex
+++ b/SMHET.tex
@@ -219,10 +219,10 @@ and Pt models (see Figure 2 (d)).
 
 The spectral flexibility of dielectric scattering
 resonances allows tuning to overlap with one or more of these transition energies via the nanosphere size; for example,
-a $d=270nm$ dielectric NS has a broad scattering resonance (herein referred to as a Fabry-Perot (FP) resonance) that overlaps 
+a $d=270nm$ dielectric NS has a relatively broad scattering resonance (herein referred to as a Fabry-Perot (FP) resonance) that overlaps 
 with an Au transition at 3.1 eV, and
-a $d=685nm$ dielectric NS has narrow scattering resonances (whispering gallery modes (WGM)) that overlap with every transition between 1.3 and 3.3 eV.
-As proxies of the hot-carrier dynamics, we plot the population dynamics of the highest and lowest energy orbitals in our active space, which lie
+a $d=685nm$ dielectric NS has narrow scattering resonances (whispering gallery modes (WGM)) that overlap with multiple transitions between 1.3 and 3.3 eV.
+As proxies of the hot-carrier dynamics in the Au NC, we plot the population dynamics of the highest and lowest energy orbitals in our active space, which lie
 2.2 eV above and 1.6 eV below the Fermi energy, respectively (Figure 1 (e) and (f)).  Snapshots of the populations of all active
 orbitals in the Au NC model at various times are also provided in the supplemental information (see Figure S1).  
 We observe that the LSPR generates a relatively small
@@ -231,13 +231,16 @@ case lead to significantly more efficient hot-hole generation with field driven 
 WGM resonances lead to significantly more efficienty hot-electron generation with field drive dynamics that evolve on a much longer (~200 fs) timescale
 (Figure 1(e) and Figure 3(b)).
 
-These differences can be attributed in part to the unique ways in which each resonant interaction modulates the incident optical
-fields in space and time. An illustration of the former can be see in the electric field intensity maps at the resonance frequency for the 
-Au LSPR (Figure 1(a)), FP resonance (Figure 1(b)), and WGM resonance (Figure 1(c)), which shows a progressive increase in maximum nearfield
-enhancement associated with these resonances.  The larger nearfield enhancement associated with the dielectric scattering resonances
+These differences can be attributed in part to the unique ways in which each resonant interaction simultaneously modulates the incident optical
+fields in space and in time. An illustration of spatial confinement associated with each resonance can be see in the 
+electric field intensity maps at the resonance frequency for the 
+Au LSPR (Figure 1(a)), FP resonance (Figure 1(b)), and WGM resonance (Figure 1(c)); all resonances lead to approximately 1 order of
+magnitude nearfield enhancement in the vicinity of the Au NC.  While the spatial 
+The larger nearfield enhancement associated with the dielectric scattering resonances
 compared to the Au NC LSPR is consisistent with the observation that the dielectric scattering lead to more efficient generation
-of hot-carriers.  Similarly, a progression of resonance lifetime can be inferred for these resonances from their extinction spectra, with 
-the Au LSPR having the broadest extinction peak and the shortest lifetime, and the WGM having the narrowest extinction peaks and longest lifetimes.  
+of hot-carriers. A progression of resonance lifetimes can be inferred from the extinction spectra of the Au LSRP, the FP resonance, and the WGM resonance, with 
+the Au LSPR having the broadest extinction peak and the shortest lifetime, and the WGM having the narrowest extinction peaks and longest lifetimes.  These
+lifetimes 
 Longevity of the evolution of the electric field resulting from dielectric scattering resonances are consistent with 
 with longer period of population movement from Fermi level and below to higher unoccupied orbitals when compared with surface plasmon 
 resonance of Au.  
