--- a/SMHET.tex
+++ b/SMHET.tex
@@ -209,11 +209,12 @@ Both dielectric scattering resonances show more efficient generation of hot-elec
 
 %% E_f gold is 5.52 eV, Nels = 472
 %% E_f Pt   is 9.40 eV, Nels = 1104
-Such models of metal (Au and Pt) NCs with $L=2nm$ have a number of dipole-allowed transitions between 1 and 3 eV.
-In this work, 4900 singly-excited configurations are included in $|\Psi_{CIS}\rangle$ for both Au and Pt NCs.  The electronic structure
-of these model nanocubes is distinguishable by their Fermi energies and the number of electrons: the Au NC model has a Fermi energy 
+Gold and platinum nanocubes (NCs) with $L=2nm$ are considered within this model. The electronic structure
+of these model nanocubes is distinguishable by their Fermi energies and the number of electrons: the Au NC model has a Fermi energy
 of 5.52 eV (compared to the bulk value of 5.53 eV) and 472 electrons, the Pt NC model has a Fermi energy of 9.40 eV (compared to the bulk
-value of 9.75 eV) and 1104 electrons.  Despite the large number of excited states included in our many-electron wavefunctions, the high 
+value of 9.75 eV) and 1104 electrons. 
+In this work, 4900 singly-excited configurations are included in $|\Psi_{CIS}\rangle$ for both Au and Pt NCs.  
+Despite the large number of excited states included in our many-electron wavefunctions, the high 
 degeneracy of the underlying dipole-allowed transitions leads to a relatively small number of visible spectroscopic lines for the Au (see Figure 1 (d))
 and Pt models (see Figure 2 (d)). 
 
@@ -240,7 +241,9 @@ The larger nearfield enhancement associated with the dielectric scattering reson
 compared to the Au NC LSPR is consisistent with the observation that the dielectric scattering lead to more efficient generation
 of hot-carriers. A progression of resonance lifetimes can be inferred from the extinction spectra of the Au LSRP, the FP resonance, and the WGM resonance, with 
 the Au LSPR having the broadest extinction peak and the shortest lifetime, and the WGM having the narrowest extinction peaks and longest lifetimes.  These
-lifetimes 
+lifetimes determine the period of time that the metal electrons are being driven by enhanced nearfields associated with the optical resonances, and
+the long lifetime associated with the WGM means that the nearfield that drives the metal electrons continues to evolve on a relatively long timescale compared
+to the electronic dynamics. 
 Longevity of the evolution of the electric field resulting from dielectric scattering resonances are consistent with 
 with longer period of population movement from Fermi level and below to higher unoccupied orbitals when compared with surface plasmon 
 resonance of Au.  
