--- a/SMHET.tex
+++ b/SMHET.tex
@@ -61,8 +61,9 @@ and for enabling unique pathways for photocatalytic transformations.
 
 \section{Introduction}
 
-Various strategies that exploit the optical properties of metal nanoparticles, namely their ability to support localized surface plasmons resonances (LSPR, which are collective oscillations of their 
-conduction electrons driven by visible light), have been explored recently with the aim of using low-intensity light to efficiently drive chemical 
+Various strategies that exploit the optical properties of metal nanoparticles, namely their ability to support localized surface plasmons resonances [LSPR], 
+which are collective oscillations of their 
+conduction electrons driven by light, have been explored recently with the aim of using low-intensity light to efficiently drive chemical 
 reactions~\cite{LCI_NatureMater_2011,KAC_ACSCatalysis_2013,ZLQ_RSCAdvances_2015,PKL_AccChemRes_2015}.  The interest in this area has 
 been motivated partly by the fact that metal nanoparticles (most prominently silver and gold) are exceptionally good absorbers of visible light, 
 so they are ideal candidates for harvesting solar photons~\cite{AP_NatMat_2010}.  
@@ -107,7 +108,7 @@ to those produced by plasmon excitation.
 The push to identify novel structures for mediating hot-carrier generation and transfer has been paralleled by 
 efforts to develop theoretical methodologies to elucidate these processes.  The underlying electronic
 structure has been treated both within free-electron models confined by potential wells~\cite{GZG_JPCC_2013,ZG_JPCC_2014,MLK_ACSNano_2014,KPB_SciRep_2015,SAG_ACSPhotonics_2016} (here called
-``particle-in-a-well" (PIW) models), as well as by {\it ab initio} approaches~\cite{SNJ_NatComm_2014,BMN_NatComm_2015,MWW_NatComm_2015,BSN_ACSNano_2016}.
+``particle-in-a-well" [PIW] models), as well as by {\it ab initio} approaches~\cite{SNJ_NatComm_2014,BMN_NatComm_2015,MWW_NatComm_2015,BSN_ACSNano_2016}.
 Using PIW models, Govorov and co-workers developed a theory of 
 hot-electron generation within the framework of time-dependent perturbation theory that
 has elucidated a variety of shape- and size-dependent factors for optimizing 
@@ -122,24 +123,22 @@ and found negligible impact on hot-carrier generation and dynamics in Ag nanosph
 though Bernardi {\it et al} have demonstrated that many-body effects are important in the hot-carrier dynamics resulting
 from surface plasmon polaritons in gold and silver~\cite{BMN_NatComm_2015}.
 
-We develop an novel approach for studying hot-carrier dynamics that may arise from arbitrary electromagnetic
-fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and plasmon resonance
+We develop a novel approach for studying hot-carrier dynamics that may arise from arbitrary electromagnetic
+fields, including the unique near-fields that arise from SMA on hybrid dielectric-metal nanoparticles and LSPR
 on noble metal nanoparticles.
-%In this work, we take a first step towards investigating the unique distributions and dynamics of energetic carriers produced via SMA in 
-%dielectric sphere/metal nanoparticle hybrid structures by developing a multi-scale modelling framework
-%for simulating the electronic dynamics driven by arbitrary time-domain electromagnetic fields.  We find that the populations
-%and dynamics of hot carriers derived from SMA can be tuned through simple
-%geometric parameters of the dielectric component of the hybrid structures.   Importantly, we also find that in a variety of circumstances, energetic electron
-%generation may be more efficienty by scattering mediated absorption than by plasmon excitation under the same illumination conditions.
 We consider the electronic degrees of freedom on the metal nanoparticle subject to the time-dependent Hamiltonian 
 \begin{equation}\label{eq:TDHam}
 \hat{H}(t) = \hat{H}_{el} - {\bf E}(t) \cdot \hat{\mu}, 
 \end{equation}
 where the specific form of ${\bf E}(t)$ derives from a rigorous time-domain electrodynamics calculation with a realistic model
-of the nanostructures in question and $\hat{H}_{el}$ describes non-interacting electrons confined to metal nanocubes (NCs) an infinite potential well.  
+of the nanostructures in question and $\hat{H}_{el}$ describes non-interacting electrons confined to metal nanocubes [NCs] an infinite potential well.  
 We compute the time-domain field 
-using a commercial simulator based on the finite-difference time-domain method~\cite{Lumerical}; more details are given in 
-the supplemental information.    
+using a commercial simulator based on the finite-difference time-domain [FDTD] method~\cite{Lumerical}.  
+Incorporating  ${\bf E}(t)$ from these FDTD simulations into the time-dependent Hamiltonian enables us to investigate the unique ways
+in which the electronic degrees of freedom evolve under the influence of the distinct time-varying fields that result
+from LSPR and dielectric scattering resonances, allowing us a unique window into the hot-carrier dynamics resulting from LSPR as compared
+to SMA.  More details about the FDTD calculations are provided in
+the supplemental information.  
 
 The many-electron wavefunction of the metal nanoparticles is expanded in terms of a configuration-interaction expansion that
 includes all singly-excited configurations,
@@ -164,10 +163,12 @@ matrix.  The Hamiltonian matrix is comprised of three unique blocks in the CIS m
     \langle \Phi_0 | \hat{H}(t) | \Phi_0 \rangle    &     \langle \Phi_0 | \hat{H}(t) | \Phi_i^a \rangle    \\
   \langle \Phi_j^b | \hat{H}(t) | \Phi_0 \rangle    &   \langle \Phi_j^b | \hat{H}(t) | \Phi_i^a \rangle \end{pmatrix}.
 \end{equation}
-Explicit expressions for Hamiltonian matrix elements are given for both the nanocube and nanosphere models in the supplemental information.
+Explicit expressions for Hamiltonian matrix elements are given for the NC model in the supplemental information.
+
 Given the simplicity of the underlying electronic Hamiltonian, the field-free Hamiltonian matrix is diagonal, and only the dipolar
 interaction of the nanoparticle with the external field can induce transitions among the electronic configurations, hence the treatment in 
-this work neglects excited-state decay contributions from electron-electron scattering.  These contributions will be explored in future work.  Also because of the diagonal nature of field-free Hamiltonian, each configuration $|\Phi_i^a\rangle$ is an eigenfunction
+this work neglects excited-state decay contributions from electron-electron scattering.  These contributions will be explored in future work.  
+Also because of the diagonal nature of field-free Hamiltonian, each configuration $|\Phi_i^a\rangle$ is an eigenfunction
 of the field-free Hamiltonian.  This simplifies the interpretation of the electronic structure relative to the CIS 
 wavefunction in molecular quantum mechanics where electron repulsion is included in the Hamiltonian
 and the excited electronic eigenfunctions are linear combinations of singly-excited configurations. 
@@ -175,7 +176,7 @@ The multiplication of the Hamiltonian matrix on the coefficient vector generates
 a variety of algorithms are known that use this information to propagate the wavefunction in time.  Here we use a symplectic integrator
 described in Ref.~\citenum{SP_JCP_96}.  Propagation of the CIS wavefunction is referred to as the TDCIS method throughout.
 
-We analyze the hot-carrier distribution and dynamics that results from SMA and plasmon excitation by computing the 
+We analyze the hot-carrier distribution and dynamics that results from SMA and LSPR excitation by computing the 
 instantaneous populations of orbitals both above and below the Fermi level of the metal nanostructure.   
 In our model, the orbitals are energy eigenstates of a 1-electron Hamiltonian and have well-defined kinetic energy,
 and the orbital populations are given by the diagonal elements of the 1-electron reduced density matrix,
@@ -199,18 +200,21 @@ the PIW model for nanocubes) so that the orbital energies can be readily compute
 \caption{Three regimes for light-matter interactions leading to unique
 spatial and temporal shaping of the incident field, and the corresponding
 impact on electronic dynamics in a Au nanocube. Plots of the near-field enhancements (${\bf |E|}/{\bf |E_0|}$) are shown of the
-Au NC's LSPR ($\lambda=532 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric NS decorated with Au NCs ($\lambda = 397 nm$, {\bf Panel (b)}),
-and a Whispering Gallery Mode resonance of a d=685 nm dielectric NS decorated with Au NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
+Au NCs LSPR ($\lambda=532 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric nanosphere decorated with Au NCs ($\lambda = 397 nm$, {\bf Panel (b)}),
+and a Whispering Gallery Mode resonance of a d=685 nm dielectric nanosphere decorated with Au NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
 The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Au NC, showing particularly
-strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric NS ({\bf Panel (d)}).
+strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric nanosphere ({\bf Panel (d)}).
 Both dielectric scattering resonances show more efficient generation of hot-electrons ({\bf Panel (e)}) and hot-holes ({\bf Panel(f)}) compared to LSPR in this case.}
 \end{center}
 \end{figure}
 
 %% E_f gold is 5.52 eV, Nels = 472
 %% E_f Pt   is 9.40 eV, Nels = 1104
-Gold and platinum nanocubes (NCs) with $L=2nm$ are considered within this model. The electronic structure
-of these model nanocubes is distinguishable by their Fermi energies and the number of electrons: the Au NC model has a Fermi energy
+The TDCIS approach is applied to investigate hot-carrier dynamics of $L=2nm$ gold and platinum NCs that are (a) free-standing so that
+the dynamics are induced by optical resonances supported by the NC alone and (b) supported on various dielectric nanospheres so
+that the dynamics are also induced by time-evolving nearfields arising from dielectric scattering resonance.
+The electronic structure
+of these model NCs are distinguishable by their Fermi energies and the number of electrons: the Au NC model has a Fermi energy
 of 5.52 eV (compared to the bulk value of 5.53 eV) and 472 electrons, the Pt NC model has a Fermi energy of 9.40 eV (compared to the bulk
 value of 9.75 eV) and 1104 electrons. 
 In this work, 4900 singly-excited configurations are included in $|\Psi_{CIS}\rangle$ for both Au and Pt NCs.  
@@ -219,10 +223,16 @@ degeneracy of the underlying dipole-allowed transitions leads to a relatively sm
 and Pt models (see Figure 2 (d)). 
 
 The spectral flexibility of dielectric scattering
-resonances allows tuning to overlap with one or more of these transition energies via the nanosphere size; for example,
-a $d=270nm$ dielectric NS has a relatively broad scattering resonance (herein referred to as a Fabry-Perot (FP) resonance) that overlaps 
+resonances allows tuning to overlap with one or more of these transition energies via the nanosphere size; in contrast, for very small 
+metal nanoparticles, the position of the LSPR is intrinsically related to the relative permittivity of the metal~\cite{Bohren}.  This is
+illustrated by plotting the scattering spectrum of a moderate-sized ($d=270nm$) and large ($d=685nm$) dielectric nanospheres and the 
+absorption spectrum of a small ($d=2nm$) gold nanosphere overlaid with the dipole-allowed
+transitions in our PIW model of the Au NC (see Figure 1(d)). The $d=270nm$ dielectric nanosphere has a relatively broad scattering resonance 
+(herein referred to as a Fabry-Perot [FP] resonance) that overlaps 
 with an Au transition at 3.1 eV, and
-a $d=685nm$ dielectric NS has narrow scattering resonances (whispering gallery modes (WGM)) that overlap with multiple transitions between 1.3 and 3.3 eV.
+a $d=685nm$ dielectric nanosphere has narrow scattering resonances (whispering gallery modes [WGM]) 
+that overlap with multiple transitions between 1.3 and 3.3 eV.  The $2nm Au$ NC has a broad absorption peak associated with its LSPR that partially
+overlaps with a dipole-allowed transition in the PIW Au NC at 2.5 eV. 
 As proxies of the hot-carrier dynamics in the Au NC, we plot the population dynamics of the highest and lowest energy orbitals in our active space, which lie
 2.2 eV above and 1.6 eV below the Fermi energy, respectively (Figure 1 (e) and (f)).  Snapshots of the populations of all active
 orbitals in the Au NC model at various times are also provided in the supplemental information (see Figure S1).  
@@ -230,54 +240,58 @@ We observe that the LSPR generates a relatively small
 population of hot-carriers with field-driven dynamics that evolve on a short (~10 fs) timescale.  FP resonance in this
 case lead to significantly more efficient hot-hole generation with field driven dynamics that evolve on a moderate (~50 fs) timescale (Figure 1(f)), while
 WGM resonances lead to significantly more efficienty hot-electron generation with field drive dynamics that evolve on a much longer (~200 fs) timescale
-(Figure 1(e) and Figure 3(b)).
+(Figure 1(e) and Figure 3(b)).  Another key distinction hot-carrier density generated by the Au LSPR and by SMA is that the hot-carrier density
+of the former is concentrated within 1 eV of the Fermi level, while SMA leads to appreciable density $\pm 2$ eV of the Fermi level (see Figure S1).
 
-These differences can be attributed in part to the unique ways in which each resonant interaction simultaneously modulates the incident optical
-fields in space and in time. An illustration of spatial confinement associated with each resonance can be see in the 
-electric field intensity maps at the resonance frequency for the 
-Au LSPR (Figure 1(a)), FP resonance (Figure 1(b)), and WGM resonance (Figure 1(c)); all resonances lead to approximately 1 order of
-magnitude nearfield enhancement in the vicinity of the Au NC.  While the spatial 
-The larger nearfield enhancement associated with the dielectric scattering resonances
-compared to the Au NC LSPR is consisistent with the observation that the dielectric scattering lead to more efficient generation
-of hot-carriers. A progression of resonance lifetimes can be inferred from the extinction spectra of the Au LSRP, the FP resonance, and the WGM resonance, with 
-the Au LSPR having the broadest extinction peak and the shortest lifetime, and the WGM having the narrowest extinction peaks and longest lifetimes.  These
-lifetimes determine the period of time that the metal electrons are being driven by enhanced nearfields associated with the optical resonances, and
-the long lifetime associated with the WGM means that the nearfield that drives the metal electrons continues to evolve on a relatively long timescale compared
-to the electronic dynamics. 
-Longevity of the evolution of the electric field resulting from dielectric scattering resonances are consistent with 
-with longer period of population movement from Fermi level and below to higher unoccupied orbitals when compared with surface plasmon 
-resonance of Au.  
-%This corresponds to hot-hole generation in lowest orbitals and hot electron generation being potentially more 
-%efficient in dielectric scattering structures as opposed to surface plasmon resonance. SPR of 2 nm Au nanoparticle isolated 
-%demonstrates population dynamic changes that taper off at 10 fs compared to upwards of 70 fs for 270 nm dielectric-Au composite structure and
-%685nm dielectric-Au composite structure. Gold has a Fermi energy of 5.53 eV. Additionally, one can see that there are other orbitals that 
-%lie below the Fermi level as well as orbitals that lie above the Fermi level. The Fermi level is the energy of the highest 
-%occupied molecular orbital of the ground state configuration. In other words, all the orbitals below the 
-%Fermi level and at the Fermi level are doubly occupied to be illuminated. Additionally, all the orbitals above the 
-%Fermi level are unoccupied. 
- 	
-The second figure (Figure 4) depicts the scattering spectra of a succession of differently sized dielectric nanospheres 
-and their alignment with the gold dipole-allowed transitions. We observe that the nanosphere with diameter 685nm 
-has the best alignment with the gold transitions, and similarly, the 685nm nanosphere is also most efficient 
-in generating both hot-electrons and hot-holes. 
+In contrast to Au, small Pt nanoparticles do not support LSPR at visible wavelengths (see Figure 2 (d)), and consequently, we do not
+observe any overlap between the extinction of a 2nm Pt NS and the dipole-allowed transitions of our PIW Pt NC model.  We consider
+the same geometries of the dielectric nanospheres as before ($d=285nm$ and $d=685 nm$); the scattering resonances of the former have partial overlap with transitions in the PIW Pt NC model at 1.6 and 1.8 eV, and the resonances of the latter have partial 
+overlap with transitions at 1.8, 1.8, and 1.95 eV.  In this case, the WGMs supported by the $d=685$ dielectric NS show much greater efficiency in 
+creating hot-holes in the lowest lying orbital ($E_F - 1.6 eV$) and creating hot-electrons in the highest lying orbital in the PIW Pt NC active 
+space (see Figure 2 (e) and (f)).
+
+
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Pt_AllThree_Alternate.png}
 \caption{Three regimes for light-matter interactions leading to unique
 spatial and temporal shaping of the incident field, and the corresponding
 impact on electronic dynamics in a Pt nanocube. Plots of the near-field enhancements (${\bf |E|}/{\bf |E_0|}$) are shown of the
-Pt NC's extinction maximum ($\lambda=200 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric NS decorated with Pt NCs 
+Pt NC's extinction maximum ($\lambda=200 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric nanosphere decorated with Pt NCs 
 ($\lambda = 397 nm$, {\bf Panel (b)}),
-and a Whispering Gallery Mode resonance of a d=685 nm dielectric NS decorated with Pt NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
+and a Whispering Gallery Mode resonance of a d=685 nm dielectric nanosphere decorated with Pt NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
 The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Pt NC, showing particularly
-strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric NS ({\bf Panel (d)}).
+strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric nanosphere ({\bf Panel (d)}).
 Both dielectric scattering resonances show more efficient generation of hot-electrons ({\bf Panel (e)}) and hot-holes ({\bf Panel(f)}) compared to LSPR in this case.}
 \end{center}
 \end{figure}
 
+
+Clear distinction between the three regimes is also o
+The second figure (Figure 4) depicts the scattering spectra of a succession of differently sized dielectric nanospheres
+and their alignment with the gold dipole-allowed transitions. We observe that the nanosphere with diameter 685nm
+has the best alignment with the gold transitions, and similarly, the 685nm nanosphere is also most efficient
+in generating both hot-electrons and hot-holes. 
+
 Figure 5 also represents the scattering spectra of a succession of differently sized dielectric nanospheres and their alignment with 
 Pt dipole-allowed transitions. 685nm diameter nanospheres display the most accurate alignment with Pt dipole allowed 
 transitions, as was seen in Figure 4 for composite dielectric-Au structures. 
+
+These differences can be attributed in part to the unique ways in which each resonant interaction simultaneously modulates the incident optical
+fields in space and in time. An illustration of spatial confinement associated with each resonance can be see in the 
+electric field intensity maps at the resonance frequency for the 
+Au LSPR (Figure 1(a)), FP resonance (Figure 1(b)), and WGM resonance (Figure 1(c)); all resonances lead to approximately 1 order of
+magnitude nearfield enhancement in the vicinity of the Au NC.
+A progression of resonance lifetimes can be inferred from the extinction spectra of the Au LSRP, the FP resonance, and the WGM resonance, with
+the Au LSPR having the broadest extinction peak and the shortest lifetime, and the WGM having the most narrow extinction peaks and longest lifetimes.  These
+lifetimes determine the period of time that the metal electrons are being driven by enhanced nearfields associated with the optical resonances, and
+the long lifetime associated with the WGM means that the nearfield that drives the metal electrons continues to evolve on a relatively long timescale compared
+to the electronic dynamics.
+Longevity of the evolution of the electric field resulting from dielectric scattering resonances are consistent with
+with longer period of population movement from Fermi level and below to higher unoccupied orbitals when compared with surface plasmon
+resonance of Au.
+
+
 
 \begin{figure}
 \begin{center}
