--- a/SMHET.tex
+++ b/SMHET.tex
@@ -204,6 +204,7 @@ Au NCs LSPR ($\lambda=532 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=
 and a Whispering Gallery Mode resonance of a d=685 nm dielectric nanosphere decorated with Au NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
 The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Au NC, showing particularly
 strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric nanosphere ({\bf Panel (d)}).
+The change in orbital populations ($D_p^p(t)-D_P^p(t=0)$) is computed to measure hot-electron and hot-hole generation.
 Both dielectric scattering resonances show more efficient generation of hot-electrons ({\bf Panel (e)}) and hot-holes ({\bf Panel(f)}) compared to LSPR in this case.}
 \end{center}
 \end{figure}
@@ -257,50 +258,44 @@ Longevity of the evolution of the electric field resulting from dielectric scatt
 with longer period of population movement from Fermi level and below to higher unoccupied orbitals when compared with surface plasmon
 resonance of Au.
 
-
-In contrast to Au, small Pt nanoparticles do not support LSPR at visible wavelengths (see Figure 2 (d)), and consequently, we do not
-observe any overlap between an absorption resonance of the 2nm Pt NS and the dipole-allowed 
-transitions of our PIW Pt NC model.  We consider
-the same geometries of the dielectric nanospheres as before ($d=285nm$ and $d=685 nm$); the scattering resonances of the former have partial overlap with transitions in the PIW Pt NC model at 1.6 and 1.8 eV, and the resonances of the latter have partial 
-overlap with transitions at 1.8, 1.8, and 1.95 eV.  Again, the dielectric scattering resonances provide 
-approximately an order of magnitude 
-nearfield enhancement in the vicinity of the Pt NC, while the nearfield $|{\bf E}|/|{\bf E_0}|$ is much smaller (approximately 2)
-on the Pt NC at its extinction maximum ($\lambda=200nm$, see Figure 2 (a), (b), and (c)).
-The WGMs supported by the $d=685$ dielectric NS show much greater efficiency in creating hot-holes in the lowest lying orbital ($E_F - 1.6 eV$) and creating hot-electrons in the highest 
-lying orbital in the PIW Pt NC active space (see Figure 2 (e) and (f)).  The hot-carriers also show much more persistent dynamics
-compared to those driven by FP modes on the $d=285nm$ dielectric NS or driven by the relatively weak optical
-response of the $L=2nm$ Pt NC (see Figure 2 (e) and (f), as well as Figure S2).  
-In this case, SMA on the $d=285nm$ nanosphere
-leads to generation of hot carriers within 1 eV of the Fermi energy,   
-
-
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Pt_AllThree_Alternate.png}
 \caption{Three regimes for light-matter interactions leading to unique
 spatial and temporal shaping of the incident field, and the corresponding
 impact on electronic dynamics in a Pt nanocube. Plots of the near-field enhancements (${\bf |E|}/{\bf |E_0|}$) are shown of the
-Pt NC's extinction maximum ($\lambda=200 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric nanosphere decorated with Pt NCs 
+Pt NC's extinction maximum ($\lambda=200 nm$, {\bf Panel (a)}), a Fabry-Perot resonance of a d=285nm dielectric nanosphere decorated with Pt NCs
 ($\lambda = 397 nm$, {\bf Panel (b)}),
 and a Whispering Gallery Mode resonance of a d=685 nm dielectric nanosphere decorated with Pt NCs ($\lambda = 493 nm$, {\bf Panel (c)}).
-The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Pt NC, showing particularly
-strong overlap between these transitions and the scattering resonances of the d=685 nm dielectric nanosphere ({\bf Panel (d)}).
-Both dielectric scattering resonances show more efficient generation of hot-electrons ({\bf Panel (e)}) and hot-holes ({\bf Panel(f)}) compared to LSPR in this case.}
+The extinction spectra of these three structures are shown overlaid with the dipole-allowed transitions in the PIW model of the Pt NC, showing partial
+overlap between these transitions and the scattering resonances of the d=685 nm dielectric nanosphere ({\bf Panel (d)}).
+The change in orbital populations ($D_p^p(t)-D_P^p(t=0)$) is computed to measure hot-electron and hot-hole generation.
+The WGM shows much more efficient generation of hot-electrons ({\bf Panel (e)}) and hot-holes ({\bf Panel(f)}) compared to FP resonance in this case.}
 \end{center}
 \end{figure}
 
 
-Clear distinction between the three regimes is also o
-The second figure (Figure 4) depicts the scattering spectra of a succession of differently sized dielectric nanospheres
-and their alignment with the gold dipole-allowed transitions. We observe that the nanosphere with diameter 685nm
-has the best alignment with the gold transitions, and similarly, the 685nm nanosphere is also most efficient
-in generating both hot-electrons and hot-holes. 
 
-Figure 5 also represents the scattering spectra of a succession of differently sized dielectric nanospheres and their alignment with 
-Pt dipole-allowed transitions. 685nm diameter nanospheres display the most accurate alignment with Pt dipole allowed 
-transitions, as was seen in Figure 4 for composite dielectric-Au structures. 
-
-
+In contrast to Au, small Pt nanoparticles do not support LSPR at visible wavelengths (see Figure 2 (d)), and consequently, we do not
+observe any overlap between an absorption resonance of the 2nm Pt NS and the dipole-allowed 
+transitions of our PIW Pt NC model.  We also consider
+the same geometries of the dielectric nanospheres as before ($d=285nm$ and $d=685 nm$); the scattering resonances of the former have partial overlap with transitions in the PIW Pt NC model at 1.6 and 1.8 eV, and the resonances of the latter have partial 
+overlap with transitions at 1.8, 1.8, and 1.95 eV.  Again, the dielectric scattering resonances provide 
+approximately an order of magnitude 
+nearfield enhancement in the vicinity of the Pt NC, while the nearfield enhancement provided by the lone 
+Pt NC is much smaller ($|{\bf E}|/|{\bf E_0}|$ at $\lambda=200nm$ corresponding to the extinction maximum, see Figure 2 (a), (b), and (c)).
+Due to its relatively weak optical interaction, scattering of the Pt NC does not lead to a large density of hot-carriers; small populations
+of carriers are created near the Fermi energy (see Figure S2).  These hot-carriers can be attributed mostly to direct interaction with the 
+incident pulse, which has a peak field strength of $E_0 \approx 614,000,000 \: V/m$,
+(see Supplemental Information for more details).
+In this case, SMA on the $d=285nm$ nanosphere
+leads to generation of hot carriers within 1 eV of the Fermi energy with dynamics that persist for moderate (~50 fs) timescales.
+The WGMs supported by the $d=685$ dielectric NS show much greater efficiency in creating energetic carriers compared
+to the resonances of the $d=285nm$ dielectric NS or the Pt NC.  For example, WGMs supported by the $d=685nm$ NS are three times
+more effective at generating holes in the lowest lying orbital ($E_F - 1.6 eV$) 
+and electrons in the highest 
+lying orbital ($E_F + 0.84 eV$) in the PIW Pt NC active space as compared to FP resonance of the $d=285nm$ NS (see Figure 2 (e) and (f)).  
+The hot-carriers driven by WGM also show much more persistent dynamics, and continue to evolve beyond 100 fs (see Figure 2 (e) and (f)).
 
 \begin{figure}
 \begin{center}
@@ -317,6 +312,20 @@ hot holes in the lowest energy orbitals included in our active space (Panel
 {\bf (c)}).   }
 \end{center}
 \end{figure}
+
+
+Clear distinction between the three regimes is also o
+The second figure (Figure 4) depicts the scattering spectra of a succession of differently sized dielectric nanospheres
+and their alignment with the gold dipole-allowed transitions. We observe that the nanosphere with diameter 685nm
+has the best alignment with the gold transitions, and similarly, the 685nm nanosphere is also most efficient
+in generating both hot-electrons and hot-holes. 
+
+Figure 5 also represents the scattering spectra of a succession of differently sized dielectric nanospheres and their alignment with
+Pt dipole-allowed transitions. 685nm diameter nanospheres display the most accurate alignment with Pt dipole allowed
+transitions, as was seen in Figure 4 for composite dielectric-Au structures.
+
+
+
 The scattering of the dielectric on the spectra compared with the Platinum transitions has a unique significance when 
 compared with the dielectric-Au structure. Although platinum is a non-plasmonic metal in the visible range, it is also 
 capable of generating hot-electrons and hot-holes within the visible light range. This demonstrates this method of 
@@ -338,7 +347,9 @@ occupancy after the 20th timestep. Similarly we find that the Fabry-Perot struct
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Au_HotElectronDistribution_Comparison.png}
-\caption{Global image of hot-carrier dynamics in Au nanocrystal.}
+\caption{Snapshots of changes in occupation of each orbital in the active space of the PIW Au NC model as a measure of instantaneous hot-carrier distributions.
+The change in orbital occupation is computed from elements of the time-dependent one-electron reduced density matrix ($^1$RDM) relative to
+their initial value, $D_p^p(t)-D_P^p(t=0)$.}
 \end{center}
 \end{figure}
 
@@ -346,7 +357,9 @@ occupancy after the 20th timestep. Similarly we find that the Fabry-Perot struct
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Pt_HotElectronDistribution_Comparison.png}
-\caption{Global image of hot-carrier dynamics in Pt nanocrystal.}
+\caption{Snapshots of changes in occupation of each orbital in the active space of the PIW Au NC model as a measure of instantaneous hot-carrier distributions.
+The change in orbital occupation is computed from elements of the time-dependent one-electron reduced density matrix ($^1$RDM) relative to
+their initial value, $D_p^p(t)-D_P^p(t=0)$.  }
 \end{center}
 \end{figure}
 
